<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp100">

        <TextView
            android:id="@+id/appsloganr"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:maxEms="1"
            android:text="@string/app_logo1"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/appsloganl"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appsloganr"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="@dimen/dp10"
            android:maxEms="1"
            android:text="@string/app_logo2"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/appsloganr"
            app:layout_constraintTop_toTopOf="@id/appsloganr" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@id/appname"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp10"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:text="@string/app_name"
        android:textColor="@color/color_accent"
        android:textSize="@dimen/sp20"
        android:visibility="invisible" />
</RelativeLayout>