<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.cloudchewie.ui.custom.TitleBar
        android:id="@+id/activity_account_settings_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:transitionName="shareElement"
        app:right_button_visibility="false"
        app:title="@string/title_account" />

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/activity_account_settings_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/activity_account_settings_titlebar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/account_settings_account_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <com.cloudchewie.ui.item.EntryItem
                    android:id="@+id/entry_change_password"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="18sp"
                    app:entry_item_left_icon="@drawable/ic_light_password"
                    app:entry_item_title="@string/entry_change_password"
                    app:entry_item_top_radius_enable="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.cloudchewie.ui.item.EntryItem
                    android:id="@+id/entry_change_phone"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="18sp"
                    app:entry_item_left_icon="@drawable/ic_light_phone"
                    app:entry_item_title="@string/entry_change_phone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/entry_change_password" />

                <com.cloudchewie.ui.item.EntryItem
                    android:id="@+id/entry_bind_wechat"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="18sp"
                    app:entry_item_bottom_radius_enable="true"
                    app:entry_item_left_icon="@drawable/ic_light_wechat"
                    app:entry_item_title="@string/entry_bind_wechat"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/entry_change_phone" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/account_settings_account_operation_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/account_settings_account_layout">

                <com.cloudchewie.ui.item.EntryItem
                    android:id="@+id/entry_cancelaccount"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="18sp"
                    app:entry_item_bottom_radius_enable="true"
                    app:entry_item_left_icon="@drawable/ic_light_cancel"
                    app:entry_item_title="@string/entry_cancelaccount"
                    app:entry_item_top_radius_enable="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
</RelativeLayout>